frontend and php changes

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
             </div>
         </div>
         </div>
-        <div class="header-wrapper">
-        <div class="header-area">
-            <h1>GET STARTED WITH BLOGS</h1>
-            <p>Discover the latest trends and tips to elevate your lifestyle. From tech innovations to wellness hacks, we’ve got you covered. Stay inspired!</p>
-            <a href="./php files/register.php"><button class="Get-started-btn">Get Started</button></a>
+        <div class="header-container">
+            <div class="header-wrapper">
+                <div class="header-area">
+                    <h1>GET STARTED WITH BLOGS</h1>
+                    <p>Discover the latest trends and tips to elevate your lifestyle. From tech innovations to wellness hacks, we’ve got you covered. Stay inspired!</p>
+                    <a href="./php files/register.php"><button class="Get-started-btn">Get Started</button></a>
+                </div>
+            </div>
         </div>
-        </div>
+        
         <div class="spacer"></div>
 
         <div class="middle-outer-div">
@@ -56,12 +59,12 @@
                     <p>Monetize your creativity effortlessly by selling exclusive content directly to your audience. From digital downloads to premium subscriptions, turn your work into a profitable venture with seamless tools that let you focus on what you do best.</p>
                 </div>
                 <div class="image-content">
-                    <img src="your-image.jpg" alt="Content Preview">
+                    <img src="assets/pexels-dariaobymaha-1684032.jpg" alt="Content Preview">
                 </div>
             </div>
             <div class="outerdiv2-content1">
                 <div class="image-content1">
-                    <img src="your-image.jpg" alt="Content Preview">
+                    <img src="assets/house (9).jpeg" alt="Content Preview">
                 </div>
                 <div class="content-text1">
                     <h1>Launch a Subscription-Based Newsletter</h1>
