--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="nav-right">
                 <a href="#" class="language-switch"><i class="fa fa-globe"></i></a>
                 <p>|</p>
-                <a href="./php files/login.php"><button class="login-btn">Login</button></a>
-                <a href="./php files/register.php"><button class="register-btn">Register</button></a>
+                <a href="./php_files/login.php"><button class="login-btn">Login</button></a>
+                <a href="./php_files/register.php"><button class="register-btn">Register</button></a>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@
                 <div class="header-area">
                     <h1>GET STARTED WITH BLOGS</h1>
                     <p>Discover the latest trends and tips to elevate your lifestyle. From tech innovations to wellness hacks, we’ve got you covered. Stay inspired!</p>
-                    <a href="./php files/register.php"><button class="Get-started-btn">Get Started</button></a>
+                    <a href="./php_files/register.php"><button class="Get-started-btn">Get Started</button></a>
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
             <div class="how-to">
                 <div class="left">
                     <h1>How to create a blog</h1>
-                    <a href="./php files/register.php" class="get-started">GET STARTED →</a>
+                    <a href="./php_files/register.php" class="get-started">GET STARTED →</a>
                 </div>
                 <div class="right">
                     <ol>
